src/components/Divisions/styles.scss
.has-sticky {
  // Odyssey Nav-bar should behave as if it's hiding
  :global .Nav.is-above > .Nav-bar {
    transform: translateY(-102%);
  }
}

.root {
  padding-top: 0.75rem;
}

.header {
  z-index: 2;
  margin-bottom: 0.25rem;
}

.header-inner {
  margin-left: -1rem;
  margin-right: -1rem;
  padding: 1rem 1rem 0;
  // Should use Odyssey document background-colour
  background-color: #f9f9f9;
  background-color: var(--bg, #f9f9f9);

  .sticky > & {
    border-bottom: 0.0625rem solid #d9d9d9;
  }
}

.controls {
  padding: 0.5rem 0.375rem 0.375rem;

  & * {
    font-family: ABCSans, Helvetica, Arial, sans-serif;
    font-size: 0.75rem;
    font-weight: bold;
    text-transform: uppercase;
  }
}

.top {
  position: relative;
  margin: 0;
  border: 0;
  padding: 0.25rem 1rem 0.25rem 0.25rem;
  background-color: transparent;
  line-height: 1rem;
  vertical-align: middle;
  white-space: nowrap;
  transition: 0.25s opacity;

  .header:not(.sticky) & {
    opacity: 0;
    pointer-events: none;
  }

  &::after {
    content: '';
    position: absolute;
    top: 0.25rem;
    right: 0;
    width: 0.875rem;
    height: 0.875rem;
    background-image: url(./top.svg);
    background-position: right center;
    background-repeat: no-repeat;
    background-size: 100%;
  }
}

